--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<link href="style.css" rel="stylesheet" />
 <html lang="en">
+
 
 <head>
     <title>youtube mod bot</title>
@@ -18,7 +20,7 @@
         </button>
     </a>
     <a href="/startChatTracking">
-        <button>
+        <button class="button-29" role="button">
             startChatTracking
         </button>
     </a>
@@ -30,3 +32,6 @@
 </body>
 
 </html>
+
+
+
