working on adding new commands

--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="buttons">
-        <div class="card">
+        <!-- <div class="card">
             <a href="/auth" class="button">
                 <button class="button-24" role="button">auth</button>
                 <p class="container">
@@ -117,7 +117,7 @@
                     Select the one your going to go live with on youtube.
                 </p>
             </a>
-        </div>
+        </div> -->
 
         <div class="card">
             <a href="/findChat" class="button">
