Co-authored-by: kingerious <MDxWARRIORxOP@users.noreply.github.com>

--- a/main.html
+++ b/main.html
@@ -109,15 +109,14 @@
     </div>
 
     <div class="buttons">
-        <!-- <div class="card">
-            <a href="/auth" class="button">
-                <button class="button-24" role="button">auth</button>
+        <div class="card">
+            <a href="/fullStart" class="button" id="startButton">
+                <button class="button-24" role="button">Start The bot Automagically</button>
                 <p class="container">
-                    Connect your youtube account with the app. <br>
-                    Select the one your going to go live with on youtube.
+                    Starts all bot services. <br>
                 </p>
             </a>
-        </div> -->
+        </div>
 
         <div class="card">
             <a href="/findChat" class="button">
@@ -186,6 +185,8 @@
             alert("Message not sent.")
         }
     }) 
+
+
 </script>
 
 </html>
