scheduled messages pt.2

--- a/main.html
+++ b/main.html
@@ -167,6 +167,17 @@
             </a>
         </div>
 
+
+        <div class="card">
+            <a href="/startPromoting" class="button">
+                <button class="button-24" role="button">Start Promoting</button>
+                <p class="container">
+                    Press only after pressing "findChat" button. <br>
+                    Mods your chat.
+                </p>
+            </a>
+        </div>
+
     </div>
 </body>
 
