--- a/main.html
+++ b/main.html
@@ -1,115 +1,113 @@
 <!DOCTYPE html>
 <link href="style.css" rel="stylesheet" />
 <html lang="en">
-
-
-<head>
+  <head>
     <title>AlienBot-Youtube</title>
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
 
-        * {
-            font-family: "Inter", sans-serif;
-        }
+      * {
+        font-family: "Inter", sans-serif;
+      }
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
+      a {
+        text-decoration: none;
+        color: black;
+      }
 
-        h1 {
-            font-size: 2.5rem;
-        }
+      h1 {
+        font-size: 2.5rem;
+      }
 
-        p {
-            font-size: 1.1rem;
-        }
+      p {
+        font-size: 1.1rem;
+      }
 
-        .name {
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            width: 100%;
-        }
+      .name {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+      }
 
-        .buttons {
-            display: flex;
-            justify-content: center;
-            align-content: center;
-            width: 100%;
-        }
+      .buttons {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+      }
 
-        .button {
-            display: block;
-            margin-left: 10px;
-            align-self: center;
-            justify-self: center;
-        }
+      .button {
+        display: block;
+        margin-left: 10px;
+        align-self: center;
+        justify-self: center;
+      }
 
-        .button-24 {
-            background: #FF4742;
-            border: 1px solid #FF4742;
-            border-radius: 6px;
-            box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
-            box-sizing: border-box;
-            color: #FFFFFF;
-            cursor: pointer;
-            display: inline-block;
-            font-family: inherit;
-            font-size: 1rem;
-            font-weight: 800;
-            line-height: 16px;
-            min-height: 40px;
-            outline: 0;
-            padding: 12px 14px;
-            text-align: center;
-            text-rendering: geometricprecision;
-            text-transform: none;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-            vertical-align: middle;
-        }
+      .button-24 {
+        background: #ff4742;
+        border: 1px solid #ff4742;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+        box-sizing: border-box;
+        color: #ffffff;
+        cursor: pointer;
+        display: inline-block;
+        font-family: inherit;
+        font-size: 1rem;
+        font-weight: 800;
+        line-height: 16px;
+        min-height: 40px;
+        outline: 0;
+        padding: 12px 14px;
+        text-align: center;
+        text-rendering: geometricprecision;
+        text-transform: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+      }
 
-        .button-24:hover,
-        .button-24:active {
-            background-color: initial;
-            background-position: 0 0;
-            color: #FF4742;
-        }
+      .button-24:hover,
+      .button-24:active {
+        background-color: initial;
+        background-position: 0 0;
+        color: #ff4742;
+      }
 
-        .button-24:active {
-            opacity: .5;
-        }
+      .button-24:active {
+        opacity: 0.5;
+      }
 
-        .card {
-            /* Add shadows to create the "card" effect */
-            box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            margin: 10px;
-            padding: 5px;
-            border: 1px solid rgba(0, 0, 0, 0.2);
-        }
+      .card {
+        /* Add shadows to create the "card" effect */
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        margin: 10px;
+        padding: 5px;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+      }
 
-        /* On mouse-over, add a deeper shadow */
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-        }
+      /* On mouse-over, add a deeper shadow */
+      .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      }
 
-        /* Add some padding inside the card container */
-        .container {
-            padding: 2px 16px;
-        }
+      /* Add some padding inside the card container */
+      .container {
+        padding: 2px 16px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="name">
-        <h1>AlienBot-Youtube</h1>
+      <h1>AlienBot-Youtube</h1>
     </div>
 
     <div class="buttons">
-        <!-- <div class="card">
+      <!-- <div class="card">
             <a href="/auth" class="button">
                 <button class="button-24" role="button">auth</button>
                 <p class="container">
@@ -119,73 +117,112 @@
             </a>
         </div> -->
 
-        <div class="card">
-            <a href="/findChat" class="button">
-                <button class="button-24" role="button">find chat</button>
-                <p class="container">
-                    Press this button after going live. <br>
-                    It finds your live stream's chat.
-                </p>
-            </a>
-        </div>
+      <div class="card">
+        <a href="/findChat" class="button">
+          <button class="button-24" role="button">find chat</button>
+          <p class="container">
+            Press this button after going live. <br />
+            It finds your live stream's chat.
+          </p>
+        </a>
+      </div>
+      <div class="card">
+        <a href="/startLivestream" id="startLivestreamButton" class="button">
+          <button class="button-24" role="button">find chat</button>
+          <p class="container">
+            Press this button after going live. <br />
+            It finds your live stream's chat.
+          </p>
+        </a>
+      </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <hr>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <br />
     <div class="buttons">
-        <div class="card">
-            <a href="/startChatTracking" class="button">
-                <button class="button-24" role="button">start tracking chat</button>
-                <p class="container">
-                    Press only after pressing "findChat" button. <br>
-                    Starts tracking chat messages.
-                </p>
-            </a>
-        </div>
+      <div class="card">
+        <a href="/startChatTracking" class="button">
+          <button class="button-24" role="button">start tracking chat</button>
+          <p class="container">
+            Press only after pressing "findChat" button. <br />
+            Starts tracking chat messages.
+          </p>
+        </a>
+      </div>
 
-        <div class="card">
-            <a class="button" id="insertButton">
-                <button class="button-24" role="button">insert message</button>
-                <p class="container">
-                    Press only after pressing "findChat" button. <br>
-                    Inserts a message of your choice using your account.
-                </p>
-            </a>
-        </div>
+      <div class="card">
+        <a class="button" id="insertButton">
+          <button class="button-24" role="button">insert message</button>
+          <p class="container">
+            Press only after pressing "findChat" button. <br />
+            Inserts a message of your choice using your account.
+          </p>
+        </a>
+      </div>
 
-
-        <div class="card">
-            <a href="/startModServices" class="button">
-                <button class="button-24" role="button">start mod over stream</button>
-                <p class="container">
-                    Press only after pressing "findChat" button. <br>
-                    Mods your chat.
-                </p>
-            </a>
-        </div>
-
+      <div class="card">
+        <a href="/startModServices" class="button">
+          <button class="button-24" role="button">start mod over stream</button>
+          <p class="container">
+            Press only after pressing "findChat" button. <br />
+            Mods your chat.
+          </p>
+        </a>
+      </div>
     </div>
-</body>
+  </body>
 
-<script>
+  <script>
     document.getElementById("insertButton").addEventListener("click", (e) => {
-        e.preventDefault();
-        const msg = prompt("Type in the message you want to send.");
+      e.preventDefault();
+      const msg = prompt("Type in the message you want to send.");
 
-        const confirm = prompt(`The message your sending is:\n${msg}\nconfirm?\n(yes/no)`)
+      const confirm = prompt(
+        `The message your sending is:\n${msg}\nconfirm?\n(yes/no)`
+      );
+
+      if (confirm.startsWith("y")) {
+        console.log(`Message sent! Message content:\n${msg}`);
+
+        window.location.href = `/insertMessage?message=${msg}`;
+      } else {
+        alert("Message not sent.");
+      }
+    });
+
+    const allowedPrivacyStatuses = ["public", "private", "unlisted"];
+
+    document
+      .getElementById("startLivestreamButton")
+      .addEventListener("click", (e) => {
+        e.preventDefault();
+
+        const title = prompt("Please type in the title of the stream.");
+        const description = prompt(
+          "Please type in the description of the stream."
+        );
+        const privacyStatus = prompt(
+          "Please type in the privacy status of the stream. (private/public/unlisted)"
+        );
+
+        if (!allowedPrivacyStatuses.includes(privacyStatus))
+          return alert("Invalid privacy status");
+
+        const confirm = prompt(
+          `The stream's title is ${title}, description is ${description} and privacy status is ${privacyStatus}. confirm? (yes/no)`
+        );
 
         if (confirm.startsWith("y")) {
-            console.log(`Message sent! Message content:\n${msg}`)
+          console.log(`Live stream started!`);
 
-            window.location.href = `/insertMessage?message=${msg}`;
+          window.location.href = `/startLivestream?title=${title}&description=${description}&privacyStatus=${privacyStatus}`;
         } else {
-            alert("Message not sent.")
+          alert("Message not sent.");
         }
-    }) 
-</script>
-
+      });
+  </script>
 </html>
