yep, an off button

--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@
           </p>
         </a>
       </div>
+
+      <div class="card">
+        <a href="/stopChatTracking" class="button">
+          <button class="button-24" role="button">Stop Chat Tracking</button>
+          <p class="container">
+            Press only after pressing "findChat" and "startChatTracking" button. <br />
+            Mods your chat.
+          </p>
+        </a>
+      </div>
     </div>
   </body>
 
